--- a/start-3/index.css
+++ b/start-3/index.css
@@ -3,6 +3,20 @@ body {
 	margin:0;
 }
 
+/*
+#CD {
+	text-align:center;
+	display:fixed;
+	position: relative;
+	overflow:auto;
+	width:100%;
+	height:100%;
+	z-index:-1;
+}
+#CD h1 {
+	margin-top:auto;
+	margin-bottom:auto;
+} */
 
 #cont {
 	width:100%;
@@ -12,6 +26,7 @@ body {
 
 	display:flex;
 	flex-direction:row;
+
 }
 
 #l {
@@ -20,15 +35,18 @@ body {
 }
 
 #c {
+
 	background-color:green;
 }
 
 #r {
+
 	background-color:blue;
 }
 
 .sub {
 	width:33.33333%;
+	transition: width 100ms ease-in-out, width 100ms ease-in-out;
 	display:flex;
 }
 .subsub {
