--- a/start-3/index.css
+++ b/start-3/index.css
@@ -1,26 +1,26 @@
 body {
 	padding:0;
 	margin:0;
+	background-color:blue;
 }
 
-/*
-#CD {
-	text-align:center;
-	display:fixed;
-	position: relative;
-	overflow:auto;
-	width:100%;
-	height:100%;
-	z-index:-1;
-}
-#CD h1 {
-	margin-top:auto;
-	margin-bottom:auto;
-} */
+a {
+	text-decoration:none;
+	color:black;
+} a:hover {text-decoration:underline;}
 
+#head {
+	height:7%;	
+	line-height:inherit;
+	background-color:white;
+}
+#head > h1 {
+	line-height:inherit;
+	margin:0 auto 0 auto;
+}
 #cont {
 	width:100%;
-	height:100%;
+	height:93%;
 
 	text-align:center;
 
@@ -46,9 +46,29 @@ body {
 
 .sub {
 	width:33.33333%;
-	transition: width 100ms ease-in-out, width 100ms ease-in-out;
+	transition: width 500ms;
 	display:flex;
 }
 .subsub {
 	margin:auto;
+}
+
+.subsub > ul {
+	-webkit-animation: fadein 2s;
+		-moz-animation: fadein 2s;
+			animation: fadein 2s;
+	transition:display 1s;
+	grid-template-columns: 1fr 1fr 1fr;
+	height:auto;
+	display:none;
+}
+
+.subsub > ul > li {
+	background-color:white;
+	margin:2px;
+	display:grid;
+}
+
+.subsub > ul > li > a {
+	padding:20px 40px 20px 40px
 }
