--- a/start-3/index.css
+++ b/start-3/index.css
@@ -4,15 +4,20 @@ body {
 	background-color:blue;
 }
 
+h1 {
+	font-size: 48px;
+}
+
 a {
 	text-decoration:none;
 	color:black;
 } a:hover {text-decoration:underline;}
 
 #head {
-	height:7%;	
+	height:6.5%;	
 	line-height:inherit;
 	background-color:white;
+	text-align:center;
 }
 #head > h1 {
 	line-height:inherit;
@@ -20,7 +25,7 @@ a {
 }
 #cont {
 	width:100%;
-	height:93%;
+	height:93.5%;
 
 	text-align:center;
 
@@ -58,7 +63,7 @@ a {
 		-moz-animation: fadein 2s;
 			animation: fadein 2s;
 	transition:display 1s;
-	grid-template-columns: 1fr 1fr 1fr;
+	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 	height:auto;
 	display:none;
 }
@@ -67,8 +72,9 @@ a {
 	background-color:white;
 	margin:2px;
 	display:grid;
-}
+} .subsub > ul > li:hover { background-color:#a5a5a5;}
 
 .subsub > ul > li > a {
-	padding:20px 40px 20px 40px
+	padding:30px 40px 30px 40px
 }
+
