--- a/start-3/style.css
+++ b/start-3/style.css
@@ -1,3 +1,8 @@
+html, body {
+	max-width: 100%;
+  overflow-x: hidden;
+}
+
 body {
 	padding:0;
 	margin:0;
@@ -14,7 +19,7 @@ a {
 } a:hover {text-decoration:underline;}
 
 #head {
-	height:6.5%;	
+	height:6.5%;
 	line-height:inherit;
 	background-color:white;
 	text-align:center;
@@ -68,6 +73,5 @@ a {
 } .subsub > ul > li:hover { background-color:#a5a5a5;}
 
 .subsub > ul > li > a {
-	padding:50px;
+	padding:40px 20px;
 }
-
